[build-system]
requires = ["jupyter_packaging~=0.7.9", "jupyterlab~=3.0", "setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.poetry]
name = "jupyterlab-s3-browser"
version = "0.1"
description = "JupyterLab extension for browsing S3-compatible object storage"
authors = ["James Reeve"]

[tool.poetry.dependencies]
python = "3.10.*"
jupyterlab = "^3.2.3"

[tool.poetry.dev-dependencies]
jupyter_packaging = "0.11.0"
pytest = "*"
moto = "*"
coverage = "*"
